# reminder_bot

./: .gitignore  Dockerfile  docker-compose.yml  ifo.txt  pyproject.toml  server_init.py
bd/: model.py
bot/: .env  __init__.py  config.py  state_machine.py  telegram.py  util_s.py
reports/: __init__.py  inputs.py  reminder.py  settings.py  util.py
schedules/: __init__.py  util_schedules.py
tests/: schedules_test.py
